# ZeroPoint

./: .gitignore  CHANGE_LOG.txt  CMakeLists.txt  CMakePresets.json  Kernel.c  README.md  ZeroPoint-toolchain.cmake  linker.ld
ASM/: MMU.asm  handel.asm  info.asm  kernel-modules.asm  startup.asm  table-vector.asm
C-source/: Ella.c  Interrput-common.c  Interrput.c  Kernel-modules.c  Kernel.c
C-source/Interrput/: Interrput-common.c  Interrput.c
C-source/Interrupts/: Interrupts-common.c  Interrupts.c
C-source/RAM/: MMU.c
Headers/: Custom-type.h  Ella.h  Interrput.h  Interrupts.h  Kernel-modules.h  MMU.h
Include/: Custom-type.h  Ella.h  GIC.h  Interrupts.h  Kernel-modules.h  MMU.h  Stringz.h  UART.h
common/: Ella.c  Kernel-modules.c  Stringz.c
src/: Kernel.c
src/aarch64/asm/: table-vector.asm
src/aarch64/asm/boot/: info.asm  startup.asm  table-vector.asm
src/aarch64/c-source/: GICv2.c  GICv3.c  Interrupts.c  MMU.c
src/drivers/: UART.c
